[gd_scene load_steps=7 format=3 uid="uid://dcvq7ww5jgg3m"]

[ext_resource type="Script" path="res://scenes/settings_menu.gd" id="1_636cd"]
[ext_resource type="Texture2D" uid="uid://d8silogoswjf" path="res://scenes/limbool placeholder image.png" id="2_3fhnu"]
[ext_resource type="Script" path="res://scenes/sound_options.gd" id="2_mlw1b"]
[ext_resource type="Theme" uid="uid://c1jlg0tibacxv" path="res://UI/text theme.tres" id="4_4w7uf"]
[ext_resource type="Theme" uid="uid://dv5r604ywelkl" path="res://UI/liminal pink button themeee.tres" id="5_kae7f"]

[sub_resource type="Theme" id="Theme_g0em0"]
HSlider/styles/slider = null

[node name="Audio menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_636cd")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 1382.0
offset_bottom = 763.0
texture = ExtResource("2_3fhnu")

[node name="Audio options" type="Control" parent="."]
layout_mode = 2
anchors_preset = 0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 435.0
offset_top = 133.0
offset_right = -662.0
offset_bottom = -378.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("2_mlw1b")

[node name="VBoxContainer" type="VBoxContainer" parent="Audio options"]
layout_mode = 1
anchors_preset = -1
anchor_left = -7.884
anchor_top = -0.96
anchor_right = 13.027
anchor_bottom = 3.755
offset_left = 61.62
offset_top = 153.52
offset_right = -49.485
offset_bottom = -246.435
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 0
alignment = 1

[node name="Master" type="Label" parent="Audio options/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 6
theme = ExtResource("4_4w7uf")
text = "Master"

[node name="HSlider" type="HSlider" parent="Audio options/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 6
theme = SubResource("Theme_g0em0")

[node name="SFX" type="Label" parent="Audio options/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 6
theme = ExtResource("4_4w7uf")
text = "SFX"

[node name="HSlider2" type="HSlider" parent="Audio options/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 6

[node name="Music" type="Label" parent="Audio options/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 6
theme = ExtResource("4_4w7uf")
text = "Music"

[node name="HSlider3" type="HSlider" parent="Audio options/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 6

[node name="Apply" type="Button" parent="Audio options"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -41.5
offset_top = 232.0
offset_right = 268.5
offset_bottom = 255.0
grow_horizontal = 2
grow_vertical = 0
theme = ExtResource("5_kae7f")
text = "Apply"

[connection signal="pressed" from="Audio options/Apply" to="." method="_on_apply_pressed"]
